Update - added small note on the form

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,6 +102,8 @@
                 {{shipment_form.as_ul}}
 
                 <input type="hidden" name="form_id" value="shipment-form">
+                <small><i>Use CTRL + click to select multiple inventories</i></small>
+                <br>
                 <button>submit</button>
                 <button formaction="{% url 'dashboard' %}">clear form</button>
             </form>
